# chat-collector

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SPEC.md  WORKFLOW.md  pyproject.toml  test_ag_db.py  test_ag_db2.py  test_ag_db3.py
.github/workflows/: ci.yml  release.yml
.symphony/: WORKFLOW.template.md  run.sh
docs/: demo-archive-walkthrough.md  memory-export-contract.md  operator-terminal-tui.md  operator-troubleshooting.md  releasing.md  ship-acceptance.md  source-support-matrix.md
examples/: collector.sample.toml
scripts/: release_preflight.sh  render_release_notes.py
tests/: fixture_cases.py  test_acceptance.py  test_antigravity_editor_view.py  test_archive_anomalies.py  test_archive_digest.py  test_archive_export.py  test_archive_golden.py  test_archive_identity_audit.py  test_archive_import.py  test_archive_index.py  test_archive_inspect.py  test_archive_memory_export.py  test_archive_migrate.py  test_archive_profile.py  test_archive_prune.py  test_archive_quarantine_export.py  test_archive_rewrite.py  test_archive_sample.py  test_archive_stats.py  test_archive_verify.py  test_baseline_policy.py  test_batch_collect.py  test_ci_fixture_smoke.py  test_cli_smoke.py  test_codex_app.py  test_codex_cli.py  test_config.py  test_cursor_cli.py  test_cursor_editor.py  test_demo_archive_bundle.py  test_doctor.py  test_gemini_code_assist_ide.py  test_incremental_collect.py  test_parser_drift.py  test_product_ready_docs.py  test_redaction.py  test_release_tooling.py  test_rerun_collect.py  test_rerun_config.py  test_run_diff.py  (+9 more)
(+86 files in other folders)
